# mandelbrot

./: .gitignore  .pre-commit-config.yaml  Cargo.toml
benches/: iteration.rs  mandelbrot.rs
src/: colours.rs  complex.rs  extending.rs  lib.rs  main.rs  point.rs  set.rs  zoom_path.rs
src/fix/: fix2x61.rs  fix4x123.rs  mod.rs
