[package]
name = "mandelbrot"
version = "0.1.0"
authors = ["Andrew Aylett <andrew@aylett.co.uk>"]
edition = "2021"

[dependencies]
image = "0.13.*"
time = "0.1"
num = "0.4.1"
num-traits = "0.2.8"
thiserror = "1.0.26"
anyhow = "1.0.43"
rayon = "1.5.1"
itertools = "0.10.1"
lazy_static = "1.4.0"

[dependencies.structopt]
version = "~0.3"
features = ["wrap_help"]

[dev-dependencies]
criterion = "0.3.5"
iai = "0.1.1"

[[bench]]
name = "mandelbrot"
harness = false

[[bench]]
name = "iteration"
harness = false
